# agentic-patterns

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: agent_runner.py  failure_injection.py
schemas/: message.schema.json
src/agentic_patterns/: __init__.py  circuit_breaker.py  health_probe.py  kill_switch.py  schema_validator.py
src/agentic_patterns/coordination_bus/: __init__.py  policy.py  signing.py  writer.py
tests/: test_bus.py  test_circuit_breaker.py  test_examples.py  test_kill_switch.py  test_schema_validator.py
